@@ -1,3 +1,8 @@
+2010-05-17  Alan McGovern  <amcgovern@novell.com>
+
+	* StandardCollectionView.cs: Fix the implementation of
+	  Contains now that we don't always use the filtered list.
+
 2010-05-13  Alan McGovern  <amcgovern@novell.com>
 
 	* CollectionViewSource.cs:
